# chatico_ads

./: .env.example  .gitignore  HANDOFF_AGENT.md  README.md  meta-ads-report.html  nginx.conf.example  pyproject.toml  pytest.ini
UI_REFERENCE/chatico-ads-handoff/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
UI_REFERENCE/chatico-ads-handoff/docs/: ARCHITECTURE.md  CHANGELOG.md  CURRENT_STATUS.md  DESIGN_SYSTEM.md  MODULES.md  PROJECT_OVERVIEW.md  TECH_STACK.md
UI_REFERENCE/chatico-ads-handoff/src/: App.jsx  index.css  main.jsx
database/: alembic.ini
database/migrations/: env.py
docker/: Dockerfile  Dockerfile.front  docker-compose.yml
front/: index.html  package-lock.json  package.json  vite.config.ts
front/src/: App.test.ts  App.vue  style.css
src/: main.py
src/api_v1/: __init__.py
src/api_v1/ai/: __init__.py  views.py  (+1 more)
src/core/: config.py  container.py  dependencies.py
tests/: conftest.py
tests/integration/: test_api_routes.py  test_auth_api.py  test_meta_ad_accounts_isolation.py
tests/unit/: test_ai_provider_key_use_cases.py  test_auto_verdict_fallback.py  test_config.py  test_dashboard_services.py  test_google_ads_api_client.py  test_google_ads_dashboard_services.py  test_google_ads_use_cases.py  test_llm_services_and_clients.py  test_meta_data_deletion_use_cases.py  test_meta_graph_api.py  test_meta_use_cases.py  test_public_media_preview.py  test_support_services.py  test_tiktok_ads_api_client.py  test_tiktok_ads_dashboard_services.py  test_tiktok_ads_state_service.py  test_tiktok_ads_use_cases.py
(+115 files in other folders)
