[tool.poetry]
name = "chatico-ads"
version = "0.1.0"
description = "Meta ads dashboard for small businesses"
authors = ["OpenAI Codex"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.116.1"}
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
asyncpg = "^0.30.0"
alembic = "^1.16.2"
pydantic-settings = "^2.10.1"
dependency-injector = "^4.48.1"
httpx = "^0.28.1"
pyjwt = "^2.10.1"
cryptography = "^45.0.4"
pwdlib = {extras = ["argon2"], version = "^0.3.0"}
email-validator = "^2.2.0"
aiosqlite = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.1"
respx = "^0.22.0"

[tool.black]
line-length = 120
target-version = ["py313"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
